<resources>
    <string name="app_name">UjChat</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_code">didn\'t receive code.</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="number_verification">Code verification</string>
    <string name="get_code">Get Code</string>
    <string name="_1234567890">1234567890</string>
    <string name="_963">+963</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="we_will_send_you_one_time_code_on_this_mobile_number">we wil send you one time code on this mobile number</string>
    <string name="intro">Enjoy your chatting \n \n You are secured</string>
    <string name="app_name_intro">UJ secure chatting</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_id">Enter Your ID</string>
    <string name="forget_pass">Forget your password ?</string>
    <string name="reset_now">Reset Now</string>
    <string name="question_dont_have_acc">Don\'t have an account ?</string>
    <string name="join_us_now">Join us now</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="join_our_community">Join Our Secured Community</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="signup">Sign up</string>
    <string name="first_step">First Step :</string>
    <string name="first_step_txt">a code has been sent to your registered phone number \n for verification purposes</string>
    <string name="enter_the_code_below">Enter the code below and Don\'t share it</string>
    <string name="next">Next</string>
    <string name="second_step">Second step :</string>
    <string name="second_step_txt">a code has been sent to your registered to your UJ email address \n for verification purposes</string>
    <string name="please_wait">please wait , we are verifying your identity</string>
    <string name="enjoy_your_chatting">Enjoy your chatting</string>
    <string name="you_are_secured">You Are Secured</string>
</resources>