<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher_background"
        android:background="@color/colorAccent"/>

   <RelativeLayout
       android:id="@+id/layout_input"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/logo"
       android:layout_marginStart="40dp"
       android:layout_marginEnd="40dp"
       android:layout_marginBottom="30dp"

       >
       <EditText
           android:id="@+id/user_id"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="30dp"
           android:background="@drawable/bg_input"
           android:hint="@string/hint_id"
           android:inputType="textPassword"
           android:padding="10dp"
           android:singleLine="true"
           android:textColor="@color/input_login"
           android:textColorHint="@color/input_login_hint" />
       <EditText
           android:id="@+id/password"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:background="@drawable/bg_input"
           android:hint="@string/hint_password"
           android:inputType="textPassword"
           android:padding="10dp"
           android:singleLine="true"
           android:textColor="@color/input_login"
           android:textColorHint="@color/input_login_hint"
           android:layout_below="@id/user_id"/>

   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_input"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:id="@+id/question_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="9dp"
            />
        <TextView
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_toEndOf="@id/question_dont_have_acc"
            android:layout_marginBottom="9dp"
            />

        <TextView
            android:id="@+id/question_dont_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_dont_have_acc"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/question_forget"
            />
        <TextView
            android:id="@+id/tv_join_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_us_now"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_toEndOf="@id/question_dont_have_acc"
            android:layout_below="@id/tv_forget_pass"
            />
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_below="@id/layout_options"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>