<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:text="@string/second_step"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="serif"
        android:textColor="@android:color/black"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_step_txt"
        android:layout_below="@id/title"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_code_below"
        android:layout_below="@id/txt1"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/first_step_code_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@id/txt2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_side_lock"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/first_step_code_et"/>
    <Button
        android:id="@+id/first_step_next_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_below="@id/first_step_code_et"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        />
</RelativeLayout>